DuPont DevSB/src/objects/pse__Backlog_Calculation__c.object
<CustomObject>
    <customHelpPage>pse__BacklogCalculationHelp</customHelpPage>
    <description>Stores projected billings from projects over a period of time for regions, practices, and groups. Revenue data can come from billable assignments or milestones. Backlog calculations contain child backlog detail records, which contain the actual backlog data.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Batch_Id__c</fullName>
        <description>An internal field used by PSE - not intended for display to users.</description>
        <externalId>true</externalId>
        <inlineHelpText>An internal field used by PSE - not intended for display to users.</inlineHelpText>
        <label>Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Calculate_Project_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to calculate backlog for projects contained in the region, practice, or group.</description>
        <inlineHelpText>Whether to calculate backlog for projects contained in the region, practice, or group.</inlineHelpText>
        <label>Calculate Project Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Fields_for_Current_Time_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Fields for Current Time Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <inlineHelpText>The end date for backlog calculations. If no end date is specified, all records from the start date will be processed. This is recommended when calculating unscheduled backlog.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Error_Details__c</fullName>
        <description>Details of errors that occurred during processing. Not intended for display.</description>
        <label>Error Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Include_Sublevels__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Whether to calculate backlog for all sub levels of the selected region, practice, or group. This field is ignored if backlog is calculated only for a resource.</inlineHelpText>
        <label>Include Sublevels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Report_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>Is Report Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Post_Process_Batch_Id__c</fullName>
        <description>Internal PSE field - not intended for display.</description>
        <externalId>true</externalId>
        <label>Post Process Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Reuse_Detail_Objects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reuse Detail Objects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Start_Calculating_From__c</fullName>
        <inlineHelpText>Setting this value will set the start date field automatically</inlineHelpText>
        <label>Start Calculating From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start of this week</fullName>
                </value>
                <value>
                    <fullName>Today</fullName>
                </value>
                <value>
                    <fullName>Start of next week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Post Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error Occurred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Time_Period_Types__c</fullName>
        <description>The types of time periods to calculate backlog for. NOTE: these values should match the values for Time Period.Type</description>
        <label>Time Period Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Backlog Calculation</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Practice__c</columns>
        <columns>pse__Group__c</columns>
        <columns>pse__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Backlog Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backlog Calculations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>pse__check_end_date</fullName>
        <active>true</active>
        <description>End date cannot occur before start date</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__End_Date__c)),pse__End_Date__c &lt; pse__Start_Date__c)</errorConditionFormula>
        <errorDisplayField>pse__End_Date__c</errorDisplayField>
        <errorMessage>End date cannot occur before start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__only_one_source_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  AND(LEN(pse__Region__c)&gt;0, 
    OR(LEN(pse__Practice__c)&gt;0,LEN(pse__Group__c)&gt;0,LEN(pse__Project__c)&gt;0) ),
  AND(LEN(pse__Practice__c)&gt;0, 
    OR(LEN(pse__Region__c)&gt;0,LEN(pse__Group__c)&gt;0,LEN(pse__Project__c)&gt;0) ),
  AND(LEN(pse__Group__c)&gt;0, 
    OR(LEN(pse__Region__c)&gt;0,LEN(pse__Practice__c)&gt;0,LEN(pse__Project__c)&gt;0) ),
  AND(LEN(pse__Project__c)&gt;0, 
    OR(LEN(pse__Region__c)&gt;0,LEN(pse__Group__c)&gt;0,LEN(pse__Group__c)&gt;0) )
)</errorConditionFormula>
        <errorMessage>Only one of Region, Practice, Group, or Project may be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__source_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(pse__Region__c), ISBLANK(pse__Practice__c), ISBLANK(pse__Group__c), ISBLANK(pse__Project__c))</errorConditionFormula>
        <errorMessage>One of Region, Practice, Group, or Project is required</errorMessage>
    </validationRules>
</CustomObject>